@@ -373,8 +373,8 @@ public class IndexFetcher {
     try (SolrClient client =
         new Builder(leaderUrl)
             .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout)
-            .withSocketTimeout(soTimeout)
+            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
+            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
             .build()) {
 
       return client.request(req);
@@ -400,8 +400,8 @@ public class IndexFetcher {
     try (SolrClient client =
         new HttpSolrClient.Builder(leaderUrl)
             .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout)
-            .withSocketTimeout(soTimeout)
+            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
+            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
             .build()) {
       NamedList<?> response = client.request(req);
 
@@ -1991,8 +1991,8 @@ public class IndexFetcher {
           new Builder(leaderUrl)
               .withHttpClient(myHttpClient)
               .withResponseParser(null)
-              .withConnectionTimeout(connTimeout)
-              .withSocketTimeout(soTimeout)
+              .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
+              .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
               .build()) {
         QueryRequest req = new QueryRequest(params);
         response = client.request(req);
@@ -2123,8 +2123,8 @@ public class IndexFetcher {
     try (SolrClient client =
         new HttpSolrClient.Builder(leaderUrl)
             .withHttpClient(myHttpClient)
-            .withConnectionTimeout(connTimeout)
-            .withSocketTimeout(soTimeout)
+            .withConnectionTimeout(connTimeout, TimeUnit.MILLISECONDS)
+            .withSocketTimeout(soTimeout, TimeUnit.MILLISECONDS)
             .build()) {
       QueryRequest request = new QueryRequest(params);
       return client.request(request);
