@@ -21,6 +21,7 @@ import java.lang.invoke.MethodHandles;
 import java.net.ConnectException;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.http.client.HttpClient;
 import org.apache.lucene.tests.util.LuceneTestCase;
@@ -64,8 +65,8 @@ class FullThrottleStoppableIndexingThread extends StoppableIndexingThread {
             .withHttpClient(httpClient)
             .withQueueSize(8)
             .withThreadCount(2)
-            .withConnectionTimeout(10000)
-            .withSocketTimeout(clientSoTimeout)
+            .withConnectionTimeout(10000, TimeUnit.MILLISECONDS)
+            .withSocketTimeout(clientSoTimeout, TimeUnit.MILLISECONDS)
             .build();
   }
 
